Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-2567 KRPC milestone 1
  3. IMPALA-6565

Stress test with KRPC enabled shows inconsistent results for some queries

    XMLWordPrintableJSON

Details

    • ghx-label-1

    Description

      Stress test in an 8 node cluster running at commit 881e00a8bff0469ab7860bcd0d4d4794fb04a4b8 shows some queries producing wrong results.

       Result hash mismatch; expected 3440873535184108466, got 3440873535184106162
      01:26:30                                  Query ID: c747bc20685116e8:fbac7a7100000000
      01:26:30                                  Query: select
      01:26:30   p_brand,
      01:26:30   p_type,
      01:26:30   p_size,
      01:26:30   count(distinct ps_suppkey) as supplier_cnt
      01:26:30 from
      01:26:30   partsupp,
      01:26:30   part
      01:26:30 where
      01:26:30   p_partkey = ps_partkey
      01:26:30   and p_brand <> 'Brand#45'
      01:26:30   and p_type not like 'MEDIUM POLISHED%'
      01:26:30   and p_size in (49, 14, 23, 45, 19, 3, 36, 9)
      01:26:30   and ps_suppkey not in (
      01:26:30     select
      01:26:30       s_suppkey
      01:26:30     from
      01:26:30       supplier
      01:26:30     where
      01:26:30       s_comment like '%Customer%Complaints%'
      01:26:30   )
      01:26:30 group by
      01:26:30   p_brand,
      01:26:30   p_type,
      01:26:30   p_size
      01:26:30 order by
      01:26:30   supplier_cnt desc,
      01:26:30   p_brand,
      01:26:30   p_type,
      01:26:30   p_size
      

      Attachments

        Activity

          People

            kwho Michael Ho
            kwho Michael Ho
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: